--- a/src/css/cartao.css
+++ b/src/css/cartao.css
@@ -13,7 +13,7 @@
 }
 
 .cartao-pokemon .tipo {
-    font size: 12px;
+    font-size: 12px;
     background-color: #FFFFFF;
     opacity: 0.7;
     border-radius: 10px;
@@ -65,6 +65,30 @@
     font-size: 15px;
 }
 
-.cartao-pokemon .aberto {
+.cartao-pokemon.aberto {
     display: block;
+}
+
+.tipo-fogo {
+    background-color: #ed8a8b;
+}
+
+.tipo-eletrico {
+    background-color: #fcc719;
+}
+
+.tipo-agua {
+    background-color: #76Befe;
+}
+
+.tipo-grama {
+    background-color: #49d0b0;
+}
+
+.tipo-dragao {
+    background-color: #c29791;
+}
+
+.tipo-fantasma {
+    background-color: #ba68c8;
 }
